# x86rc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: util.hpp
include/app/: stubs.hpp
include/app/stubs/: advapi32.hpp  d3d9.hpp  ddraw.hpp  dinput8.hpp  dsound.hpp  gdi32.hpp  kernel32.hpp  netapi32.hpp  shell32.hpp  shfolder.hpp  tapi32.hpp  user32.hpp  winmm.hpp  ws2_32.hpp
include/game/: functions.hpp  stubs.hpp
include/game/segments/: data.hpp  rdata.hpp  seg4.hpp  seg5.hpp  text.hpp
include/game/stubs/: advapi32.hpp  d3d9.hpp  ddraw.hpp  dinput8.hpp  dsound.hpp  gdi32.hpp  kernel32.hpp  netapi32.hpp  shell32.hpp  shfolder.hpp  tapi32.hpp  user32.hpp  winmm.hpp  ws2_32.hpp
include/x86/: defs.hpp  insn.hpp  memory_view.hpp  thread_state.hpp
include/x86/insn/: all.hpp  general_purpose.hpp
include/x86/insn/general_purpose/: binary_arithmetic.hpp  bit_and_byte.hpp  control_transfer.hpp  data_transfer.hpp  enter_and_leave.hpp  logical_instructions.hpp  miscellaneous.hpp  shift_and_rotate.hpp
scripts/: export.py
src/: entrypoint.cpp
src/game/: 451000_4A1000.cpp  4A1000_4F1000.cpp  541000_591000.cpp  771000_782AD9.cpp  application.cpp
src/game/segments/: rdata.hpp  seg4.hpp  seg5.hpp
src/x86/: memory_view.cpp  thread_state.cpp
